--- a/tables.html
+++ b/tables.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Tables Page</title>
+	<title>Spicy Restaurant | Tables</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/sticky-footer.css">
+  <link href="https://fonts.googleapis.com/css?family=Abel|Grand+Hotel" rel="stylesheet">
 	<script src="https://use.fontawesome.com/b7e3bcf6e1.js"></script>
 </head>
 <body>
@@ -13,7 +14,7 @@
 	<div class="container-fluid">
 
 		<div class="jumbotron jumbotron-fluid bg-danger">
-			<h1 class="text-center text-light display-4"><i class="fa fa-fire" aria-hidden="true"></i> Hot Restaurant</h1>
+			<h1 class="text-center text-light display-4"><i class="fa fa-fire" aria-hidden="true"></i> Spicy Restaurant</h1>
 			<hr>
 			<h3 class="text-center text-light">Current Reservations and Waiting List</h3>
 			<br>
