--- a/tables.html
+++ b/tables.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer/sticky-footer.css">
   <link href="https://fonts.googleapis.com/css?family=Abel|Grand+Hotel" rel="stylesheet">
 	<script src="https://use.fontawesome.com/b7e3bcf6e1.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
