--- a/reserve.html
+++ b/reserve.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Abel|Grand+Hotel" rel="stylesheet">
 	<script src="https://use.fontawesome.com/b7e3bcf6e1.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <script type="text/javascript" src="reservatioin.js"></script>
 </head>
 <body>
 
@@ -53,7 +54,7 @@
             <input type="text" class="form-control" id="reserve_uniqueID">
           </div>
 
-          <button type="submit" class="btn btn-primary submit">Submit</button>
+          <button type="submit" class="btn btn-primary submit" id="submit">Submit</button>
         </form>
       </div>
     </div>
